# owc-fantasy-rs

./: .gitignore  db.sql  setup.sql
backend/: Cargo.toml
backend/src/: config.rs  main.rs  routes.rs
backend/src/api/: auth.rs  mod.rs  players.rs  teams.rs  users.rs
backend/src/db/: mod.rs  models.rs  players.rs  teams.rs  users.rs
backend/src/middleware/: auth.rs  session.rs
frontend/: Cargo.toml  Dioxus.toml
src/: main.rs
